Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec SEMI
    7       | Specifier FunDec CompSt
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | /* empty */

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | /* empty */

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error RP
   37     | error SEMI

   38 DefList: Def DefList
   39        | /* empty */

   40 Def: Specifier DecList SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp MUL Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT

   63 Args: Exp COMMA Args
   64     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 22 27 36 37
INT (258) 19 61
FLOAT (259) 62
ID (260) 15 17 18 20 21 56 57 59 60
TYPE (261) 11
SEMI (262) 4 5 6 8 30 32 37 40
COMMA (263) 10 23 42 63
LC (264) 13 26
RC (265) 13 26 27
IF (266) 33 34
ASSIGNOP (267) 44 45
OR (268) 47
AND (269) 46
RELOP (270) 48
MINUS (271) 50 54
PLUS (272) 49
DIV (273) 52
MUL (274) 51
NOT (275) 55
RP (276) 20 21 22 33 34 35 36 53 56 57
LP (277) 20 21 33 34 35 53 56 57
RB (278) 19 58
LB (279) 19 58
DOT (280) 59
LOWER_THAN_ELSE (281)
ELSE (282) 34
WHILE (283) 35
RETURN (284) 32
STRUCT (285) 13 14


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 25 40
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19, on right: 9 10 19 25 43 44
FunDec (41)
    on left: 20 21 22, on right: 6 7
VarList (42)
    on left: 23 24, on right: 20 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26 27, on right: 7 31
StmtList (45)
    on left: 28 29, on right: 26 28
Stmt (46)
    on left: 30 31 32 33 34 35 36 37, on right: 28 33 34 35
DefList (47)
    on left: 38 39, on right: 13 26 38
Def (48)
    on left: 40, on right: 38
DecList (49)
    on left: 41 42, on right: 40 42
Dec (50)
    on left: 43 44, on right: 41 42
Exp (51)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62,
    on right: 30 32 33 34 35 44 45 46 47 48 49 50 51 52 53 54 55 58
    59 63 64
Args (52)
    on left: 63 64, on right: 56 63


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


state 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec SEMI
    7       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


state 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


state 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


state 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


state 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


state 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


state 13

    0 $accept: Program $end .

    $default  accept


state 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 15

   22 FunDec: error . RP

    RP  shift, and go to state 22


state 16

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


state 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


state 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


state 20

    6 ExtDef: Specifier FunDec . SEMI
    7       | Specifier FunDec . CompSt

    error  shift, and go to state 27
    SEMI   shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


state 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


state 22

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


state 23

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


state 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


state 26

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


state 27

   27 CompSt: error . RC

    RC  shift, and go to state 41


state 28

    6 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 6 (ExtDef)


state 29

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 33


state 30

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


state 31

   40 Def: Specifier . DecList SEMI

    ID  shift, and go to state 38

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


state 32

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


state 33

   38 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 33


state 34

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


state 35

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 48


state 36

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


state 37

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 24 (VarList)


state 38

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


state 39

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


state 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


state 41

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


state 42

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    LC      shift, and go to state 29
    IF      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    WHILE   shift, and go to state 60
    RETURN  shift, and go to state 61

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


state 43

   19 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 26

    $default  reduce using rule 43 (Dec)


state 44

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 67


state 45

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 41 (DecList)


state 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


state 47

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


state 48

   19 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 25 (ParamDec)


state 49

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


state 50

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 69
    ParamDec         go to state 37


state 51

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


state 52

   27 CompSt: error . RC
   36 Stmt: error . RP
   37     | error . SEMI

    SEMI  shift, and go to state 70
    RC    shift, and go to state 41
    RP    shift, and go to state 71


state 53

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


state 54

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


state 55

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 60 (Exp)


state 56

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 73


state 57

   54 Exp: MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 74


state 58

   55 Exp: NOT . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 75


state 59

   53 Exp: LP . Exp RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 76


state 60

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 77


state 61

   32 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 78


state 62

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


state 63

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


state 64

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    LC      shift, and go to state 29
    IF      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    WHILE   shift, and go to state 60
    RETURN  shift, and go to state 61

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 80
    Stmt      go to state 64
    Exp       go to state 65


state 65

   30 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . MUL Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    OR        shift, and go to state 83
    AND       shift, and go to state 84
    RELOP     shift, and go to state 85
    MINUS     shift, and go to state 86
    PLUS      shift, and go to state 87
    DIV       shift, and go to state 88
    MUL       shift, and go to state 89
    LB        shift, and go to state 90
    DOT       shift, and go to state 91


state 66

   44 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 92


state 67

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


state 68

   42 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 43
    DecList  go to state 93
    Dec      go to state 45


state 69

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


state 70

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


state 71

   36 Stmt: error RP .

    $default  reduce using rule 36 (Stmt)


state 72

   56 Exp: ID LP . Args RP
   57    | ID LP . RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    RP     shift, and go to state 94
    LP     shift, and go to state 59

    Exp   go to state 95
    Args  go to state 96


state 73

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 97


state 74

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . MUL Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    DIV  shift, and go to state 88
    MUL  shift, and go to state 89
    LB   shift, and go to state 90
    DOT  shift, and go to state 91

    $default  reduce using rule 54 (Exp)


state 75

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . MUL Exp
   52    | Exp . DIV Exp
   55    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    LB   shift, and go to state 90
    DOT  shift, and go to state 91

    $default  reduce using rule 55 (Exp)


state 76

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . MUL Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82
    OR        shift, and go to state 83
    AND       shift, and go to state 84
    RELOP     shift, and go to state 85
    MINUS     shift, and go to state 86
    PLUS      shift, and go to state 87
    DIV       shift, and go to state 88
    MUL       shift, and go to state 89
    RP        shift, and go to state 98
    LB        shift, and go to state 90
    DOT       shift, and go to state 91


state 77

   35 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 99


state 78

   32 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . MUL Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    SEMI      shift, and go to state 100
    ASSIGNOP  shift, and go to state 82
    OR        shift, and go to state 83
    AND       shift, and go to state 84
    RELOP     shift, and go to state 85
    MINUS     shift, and go to state 86
    PLUS      shift, and go to state 87
    DIV       shift, and go to state 88
    MUL       shift, and go to state 89
    LB        shift, and go to state 90
    DOT       shift, and go to state 91


state 79

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


state 80

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


state 81

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


state 82

   45 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 101


state 83

   47 Exp: Exp OR . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 102


state 84

   46 Exp: Exp AND . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 103


state 85

   48 Exp: Exp RELOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 104


state 86

   50 Exp: Exp MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 105


state 87

   49 Exp: Exp PLUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 106


state 88

   52 Exp: Exp DIV . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 107


state 89

   51 Exp: Exp MUL . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 108


state 90

   58 Exp: Exp LB . Exp RB
